Fix: Elements with hard-coded width could becoem too wide

--- a/public/main.css
+++ b/public/main.css
@@ -18,6 +18,7 @@ img {
 
 *, *:before, *:after {
     -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
+    max-width: 100%; /* prevents issues with elements in an entry that have a harccoded width above 100% of the viewport */
 }
 
 a {
